assets/scss/partials/_side-navigation.scss
@mixin expand-submenu() {
    &:after {
        transform: rotate(-180deg);
    }

    .side-submenu {
        opacity: 1;
        padding: 17px 0;
        max-height: none;
        visibility: visible;

        @include breakpoint(medium down) {
            padding: 19px 0 33px;
        }
    }
}


.side-navigation {

    &.menu-expanded {
        .side-menu {
            @include breakpoint(medium down) {
                height: 100vh;
                max-height: 100vh;
            }
        }

        .mobile-menu-heading {
            &:after {
                @include breakpoint(medium down) {
                    transform: rotate(-180deg);
                }
            }
        }
    }

    .side-menu,
    .side-submenu {
        list-style: none;
        color: $dark-blue-1;
    }

    .side-menu {
        padding: 0;
        bottom: 30px;
        position: sticky;
        border-top: 1px solid rgba($black, 0.1);

        @include breakpoint(medium down) {
            left: 0;
            width: 100%;
            padding: 0 12px;
            position: fixed;
            border-top: none;
            max-height: 54px;
            overflow: hidden;
            z-index: $z-index-5;
            background-color: $dark-blue-5;
            top: calc(#{$height-nav-medium} - 1px);
        }
    }

    .side-submenu {
        opacity: 0;
        padding: 0;
        max-height: 0;
        visibility: hidden;
        transition: all 250ms ease-in-out;
    }

    .side-menu-item {
        width: 100%;
        font-size: 1.5rem;
        font-weight: $bold;
        position: relative;
        line-height: 2.3rem;
        text-transform: uppercase;

        @include breakpoint(medium down) {
            font-size: 1.4rem;
            align-items: flex-start;
        }

        > a {
            padding: 16.5px 60px 16.5px 27px;

            @include breakpoint(medium down) {
                padding: 15.5px 19px;
            }
        }

        &.mobile-menu-heading {
            padding: 16.5px 27px;

            @include breakpoint(medium down) {
                padding: 15.5px 19px;
            }
        }

        &:not(.mobile-menu-heading) {
            border-bottom: 1px solid rgba($black, 0.1);

            @include breakpoint(medium down) {
                > a {
                    font-weight: $semi-bold;
                }
            }
        }

        &:hover > a {
            background: $dark-blue-5;
        }

        &.active > a, &:active > a {
            color: $white;
            background: $blue-2;

            @include breakpoint(medium down) {
                color: $black;
                background: $dark-blue-5;
            }
        }

        &.has-children {
            &:after {
                content: '';
                top: 25px;
                width: 14px;
                right: 23px;
                height: 9px;
                position: absolute;
                transition: all 200ms ease-in-out;
                background: url('#{$image-path}/icon-arrow-down-red.svg') no-repeat;
                background-size: contain;

                @include breakpoint(medium down) {
                    top: 23px;
                    right: 19px;
                }
            }

            &.active {
                @include breakpoint(large up) {
                    @include expand-submenu();
                }

                &:after {
                    @include breakpoint(large up) {
                        display: none;
                    }
                }
            }
        }

        &.mobile-menu-heading {
            border-bottom: 2px solid $black;

            @include breakpoint(medium down) {
                font-size: 1.6rem;
            }
        }

        &.submenu-expanded {
            @include breakpoint(medium down) {
                @include expand-submenu();
            }
        }
    }

    .side-submenu-item {
        display: flex;
        font-size: 1.6rem;
        background: $white;
        line-height: 1.8rem;
        font-weight: $regular;
        text-transform: capitalize;

        @include breakpoint(medium down) {
            line-height: 2.2rem;
            font-weight: $regular;
            background: $dark-blue-5;
        }

        > a {
            width: 100%;
            padding: 13px 36px 13px 47px;

            @include breakpoint(medium down) {
                width: auto;
                padding: 5px 28px;
            }

            &:hover {
                background: $dark-blue-5;
            }
        }
    }
}

